--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
   --color-accent: #ffa94d;
 }
 
-@import url("https://fonts.googleapis.com/css2?family=Codystar&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Codystar&display=swap');
 
 * {
   margin: 0;
@@ -18,8 +18,8 @@
 
 html {
   font-size: 62.5%;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 body {
@@ -62,7 +62,7 @@ img {
 }
 
 h1 {
-  font-family: "Codystar";
+  font-family: 'Codystar';
   font-size: 5.6rem;
 }
 
@@ -100,7 +100,7 @@ h4 {
 }
 
 progress {
-  -webkit-appearance: none;
+  appearance: none;
   width: 100%;
   height: 12px;
   grid-column: 1 / -1;
@@ -185,6 +185,19 @@ progress {
 .result span {
   font-size: 2.2rem;
   margin-right: 4px;
+}
+
+.champ {
+  background-color: var(--color-accent);
+  color: var(--color-darkest);
+  border-radius: 100px;
+  width: max-content;
+  text-align: center;
+  padding: 1rem 2rem;
+  font-size: 1.6rem;
+  font-weight: 500;
+  margin: 0 auto;
+  margin-bottom: 1.6rem;
 }
 
 .highscore {
